# agent

./: .gitignore  ARCHITECTURE.md  PRIVACY.md  README.md  build_fdroid.ps1  gradle.properties  mkdocs.yml  settings.gradle.kts  sim_zoom.py
.gemini/: settings.json
.gemini/hooks/: error-refiner.ps1
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/schemas/com.nabd.app.data.local.ChatDatabase/: 12.json
app/schemas/com.newoether.agora.data.local.ChatDatabase/: 7.json  8.json  9.json
app/src/androidTest/java/com/newoether/agora/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_chat_jni.cpp  llama_jni.cpp
app/src/main/java/com/nabd/app/: MainActivity.kt
app/src/main/java/com/nabd/app/api/: AnthropicProvider.kt  BaseOpenAiProvider.kt  CustomOpenAiProvider.kt  DeepSeekProvider.kt  EmbeddingClient.kt  GeminiProvider.kt  HttpClient.kt  LlamaChatEngine.kt  LlamaEngine.kt  LlmProvider.kt  LocalProvider.kt  OllamaProvider.kt  OpenAiProvider.kt  OpenRouterProvider.kt  QwenProvider.kt
app/src/main/java/com/nabd/app/data/: ClaudeChatImporter.kt  DataExporter.kt  DataImporter.kt  EmbeddingIndexer.kt  EmbeddingModelConfig.kt  ExportExtraSettings.kt  GptChatImporter.kt  LocalChatModelConfig.kt  MemoryManager.kt  PromptTemplateItem.kt  SettingsManager.kt
app/src/main/java/com/nabd/app/model/: AttachmentMeta.kt  ChatMessage.kt
app/src/main/java/com/newoether/agora/: MainActivity.kt
app/src/main/res/drawable/: ic_notification.xml  provider_anthropic.xml  provider_deepseek.xml  provider_google.xml  provider_ollama.xml  provider_openai.xml  provider_openrouter.xml  provider_qwen.xml  text_compare_24.xml
app/src/main/res/drawable-night/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/newoether/agora/: ExampleUnitTest.kt
docs/: getting-started.en.md  getting-started.zh.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt
fdroid/metadata/: com.newoether.agora.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: round_icon.py
(+139 files in other folders)
